--- a/resourse/stryle.css
+++ b/resourse/stryle.css
@@ -23,8 +23,8 @@ header a{
 
 main{
     flex: 1;
-    padding: 30px;
-    text-align: center;
+    padding: 15px;
+    text-align: left;
 
 }
 
@@ -32,6 +32,14 @@ main p{
     font-size: 18px;
     margin-bottom: 15px;
 }
+
+.imagenes{
+    text-align: center;
+}
+.imagenes2{
+    text-align: right;
+}
+
 
 .input-welcome{
     padding: 10px;
